<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="St_Event" Id="{b8cc9b45-92b2-4c4b-9091-4a4b7b60513a}">
    <Declaration><![CDATA[TYPE St_Event :
STRUCT
	eEventType : E_EventType ;
	eEventSeverity : TcEventSeverity ;
	nEventIdentiy : UDINT ;
	sEventText : STRING (255) ;
	dtTimeStamp : DATE_AND_TIME ;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>